--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.4
+  google_fonts: ^6.3.2
 flutter_launcher_icons:
   android: true
   ios: true
@@ -64,7 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/icon/prozync.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
