--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.4
   google_fonts: ^6.3.2
+  font_awesome_flutter: ^9.2.0
 flutter_launcher_icons:
   android: true
   ios: true
