--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.4
-  google_fonts: ^6.3.2
+  google_fonts: ^6.3.0
   font_awesome_flutter: ^9.2.0
+  flutter_staggered_grid_view: ^0.7.0
+  animations: ^2.0.11
+  file_picker: ^9.0.3
 flutter_launcher_icons:
   android: true
   ios: true
