--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   animations: ^2.0.11
   file_picker: ^9.0.3
+  http: ^1.6.0
+  shared_preferences: ^2.3.3
+  intl: ^0.20.2
+  image_picker: ^1.1.2
 flutter_launcher_icons:
   android: true
   ios: true
